fixed color palette spacing

--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@ h1, h2, h3, h4 {
     letter-spacing: .3px;
     line-height: 2;
     margin-bottom: 4rem;
-    padding-right: 16rem;
+    padding-right: 24rem;
 }
 
 /* Materials Section */
